# langchain_study

./: .env.example  .gitignore  README.md  pyproject.toml
LangGraph/: 01_核心概念与状态管理.ipynb  02_环境搭建与第一个程序.ipynb  03_Nodes节点.ipynb  04_条件路由示例.ipynb  05_ReAct工具调用.ipynb  06_多Agent与子图.ipynb  07_调试与最佳实践.ipynb
deepagents/: README.md  gen_notebooks.py
deepagents/01_核心概念/: 01_概述.ipynb  02_快速入门.ipynb  03_框架能力.ipynb
deepagents/02_模型与配置/: 01_模型.ipynb  02_自定义.ipynb  03_后端.ipynb  04_配置档案.ipynb  05_MCP集成.ipynb
deepagents/03_上下文与记忆/: 01_上下文工程.ipynb  02_长期记忆.ipynb  03_技能.ipynb  04_权限.ipynb
deepagents/04_执行模式/: 01_流式输出.ipynb  02_事件流.ipynb  03_异步子Agent.ipynb  04_子Agent.ipynb  05_人类审批.ipynb  07_通信协议.ipynb
deepagents/05_工具与沙箱/: 01_沙箱.ipynb  02_解释器.ipynb
deepagents/06_应用场景/: 01_深度研究.ipynb  02_内容构建.ipynb  03_数据分析.ipynb
deepagents/07_生产部署/: 01_生产部署.ipynb  02_评估标准.ipynb
deepagents/08_Deep-Agents-Code/: 02_配置.ipynb  06_远程沙箱.ipynb  08_数据位置.ipynb
deepagents/09_前端集成/: 01_概述.ipynb  02_沙箱.ipynb  03_子Agent流式.ipynb  04_任务列表.ipynb
deepagents/Deep-Agents-Code/: 01_概述.ipynb  03_提供商.ipynb  04_MCP工具.ipynb  05_记忆与技能.ipynb  07_子Agent.ipynb
deepagents/上下文与记忆/: 01_上下文工程.ipynb  02_长期记忆.ipynb
deepagents/前端集成/: 01_概述.ipynb  02_沙箱.ipynb  03_子Agent流式.ipynb  04_任务列表.ipynb
deepagents/应用场景/: 01_深度研究.ipynb  02_内容构建.ipynb
deepagents/执行模式/: 01_流式输出.ipynb  02_事件流.ipynb  03_异步子Agent.ipynb  04_子Agent.ipynb  06_Agent到Agent.ipynb
deepagents/核心概念/: 01_概述.ipynb  02_快速入门.ipynb  03_框架能力.ipynb  04_对比.ipynb
deepagents/模型与配置/: 01_模型.ipynb  (+1 more)
langchain/: README.md
langgraph_new/: 01_基础.ipynb
(+46 files in other folders)
