[project]
name = "langchain-study"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "deepagents>=0.6.6",
    "langchain>=1.3.2",
    "python-dotenv>=1.1.0",
    "jupyter>=1.1.0",
    "langchain-deepseek>=1.0.1",
    "dashscope>=1.25.19",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
