[project]
name = "langchain-study"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "deepagents>=0.6.6",
    "langchain>=1.3.2",
    "python-dotenv>=1.1.0",
    "jupyter>=1.1.0",
    "langchain-deepseek>=1.0.1",
    "dashscope>=1.25.19",
    "create-agent>=0.0.3",
    "langchain-community>=0.4.2",
    "langchain-chroma>=1.1.0",
    "tavily>=1.1.0",
    "langsmith>=0.8.7",
    "markdownify>=1.2.2",
    "jupyterlab-language-pack-zh-cn>=4.5.post3",
    "langgraph>=1.2.2",
    "pypdf>=6.13.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
